vault/server-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vault
  labels:
    helm.sh/chart: vault-0.18.0
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
spec:
  host: vault.apps.aap-aas-hubs-rbvk4.az.red-chesterfield.com
  to:
    kind: Service
    name: vault
    weight: 100
  port:
    targetPort: 8200
  tls:
    termination: passthrough
